--- a/2_SLIT/1_Respuesta_Impulso.ipynb
+++ b/2_SLIT/1_Respuesta_Impulso.ipynb
@@ -416,14 +416,29 @@
       "source": [
         "**Ejercicio**\n",
         "\n",
+        "1.\n",
         "* Compare la señal de salida obtenida al resolver la EDO con la obtenida mediante la convolución. Son iguales?\n",
-        "* Compruebe la solución $h(t)$ de la EDO cuando $x(t)=\\delta(t)$ de manera manual. Tener en cuenta que $\\frac{d}{dt} \\epsilon(t) = \\delta(t)$.\n",
+        "2.\n",
+        "*\n",
+        "Compruebe la solución $h(t)$ de la EDO cuando $x(t)=\\delta(t)$ de manera manual. Tener en cuenta que $\\frac{d}{dt} \\epsilon(t) = \\delta(t)$.\n",
+        "3.\n",
         "* Comprobar la solución de la integral de convolución de manera manual. Tener en cuenta las funciones Heaviside."
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
+        "#SOLUCION."
+      ],
+      "metadata": {
+        "id": "gH9DbCcvVHrc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.\n",
+        "\n",
         "Para el primer punto: Comparación de las señales de salida\n",
         "Para comparar las señales de salida obtenidas mediante la resolución de la EDO y la convolución, podemos observar las expresiones resultantes.\n",
         "\n",
@@ -443,10 +458,39 @@
     {
       "cell_type": "markdown",
       "source": [
+        "2.\n",
         "* Compruebe la solución $h(t)$ de la EDO cuando $x(t)=\\delta(t)$ de manera manual. Tener en cuenta que $\\frac{d}{dt} \\epsilon(t) = \\delta(t)$."
       ],
       "metadata": {
         "id": "WbIrESdxlQnB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#La solucion a mano se encuentra en el siguiente link: https://github.com/Hamerson-jhoel/S-Sistemas-2025-1/blob/main/SLIT-comprobacion%20respuesta%20impulso.pdf"
+      ],
+      "metadata": {
+        "id": "q9FC8a4kV2ip"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.\n",
+        "* Comprobar la solución de la integral de convolución de manera manual. Tener en cuenta las funciones Heaviside."
+      ],
+      "metadata": {
+        "id": "Oe_8quh3Vyox"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#La solucion a mano se encuentra en el siguiente link: https://github.com/Hamerson-jhoel/S-Sistemas-2025-1/blob/main/SLIT-comprobacion%20respuesta%20impulso.pdf"
+      ],
+      "metadata": {
+        "id": "wfObOvPLV9iI"
       }
     },
     {
