--- a/Transformada_Laplace/DashboardLaplace_serie_paralelo_tiporespuesta.ipynb
+++ b/Transformada_Laplace/DashboardLaplace_serie_paralelo_tiporespuesta.ipynb
@@ -13,6 +13,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**Taller 2 - LAPLACE**\n",
+        "#**Hamerson Joel Piarpuezan Piarpuezan**\n",
+        "#**1004531735**"
+      ],
+      "metadata": {
+        "id": "pZq2pqy9fWIr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#Utilizando la herramienta Streamlit, genere un dashboard para la simulacion de los sistemas.El usuario podra escoger el tipo de circuito (serie o parale lo), el tipo de respuesta (subamortiguado, sobreamortiguado,amortiguamiento crıtico o inestable), el factor de amortigua miento (restringido por el dashboard segun sea el caso) y la frecuencia natural. El dashboard debera mostrar el diagrama de bode, diagrama de polos y ceros, respuesta al impulso, al escalon y a la rampa, el tiempo de levantamiento, maximo sobreimpulso, tiempo del maximo sobreimpulso, tiempo de establecimiento y los valores de R, L, C estimados."
       ],
       "metadata": {
