--- a/PROYECTO/Dashboard_Proyecto.ipynb
+++ b/PROYECTO/Dashboard_Proyecto.ipynb
@@ -21,6 +21,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "#**Integrantes**\n",
+        "#**LEANDRO ZAPATA MARIN**\n",
+        "#**HAMERSON JHOEL PIARPUEZAN PIARPUEZAN**"
+      ],
+      "metadata": {
+        "id": "d_atzI777yp4"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Elnq10QfBNM3"
       },
